--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,6 +1,8 @@
-<div class="Row">
+<div class="Row" [ngClass]="{'Completed':item.completed}">
     <div>
-        <input type="checkbox" [checked]="item.completed">
+        <input type="checkbox" 
+        [checked]="item.completed"
+        (change)="onToggle(item)">
         {{item.title}} 
     </div>
     <div>
