--- a/src/app/components/additem/additem.component.html
+++ b/src/app/components/additem/additem.component.html
@@ -1,5 +1,9 @@
-<form action="">
+<form action="" (ngSubmit)="onSubmit()" class="Container-form">
     <h2>Registrar un nuevo articulo</h2>
+    <div>
+        <label for="">ID del articulo</label>
+        <input type="text" name="id" id="" [(ngModel)]="id"> 
+    </div>
     <div>
         <label for="">Nombre del articulo</label>
         <input type="text" name="title" id="" [(ngModel)]="title"> 
@@ -12,6 +16,6 @@
         <label for="">Cantidad</label>
         <input type="text" name="quantity" id="" [(ngModel)]="quantity">
     </div>
-    <input type="submit" value="Crear">
+    <input type="submit" value="Crear" class="Boton">
 </form>
 
